[project]
name = "lsd"
version = "0.1.0"
description = ""
authors = [
    {name = "Pedro",email = "pedrohenriquedias966@icloud.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psycopg[binary] (>=3.2.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
